# DS411-Predictive-Analytics

./: .gitignore  pyproject.toml  setup.cfg
notebooks/: 1.1-Intro-to-Text-Mining.ipynb  1.2-Introduction-and-Review-on-Data-Extraction.ipynb  1.3-Assignment-POS-Tagging.ipynb  1.4-Assignment-NER.ipynb  1.5-Assignment-Text-Classification.ipynb  DS411 - Exercise on Data Extraction - Part 2_irag.ipynb  DS411 - Exercise on Data Extraction Functions.ipynb  DS411 - Topic 11 - Sentiment Analysis - Zero Shot Learning.ipynb  DS411 - Topic 11-1 Topic Modeling.ipynb  DS411 - Topic 4-6 - NLP.ipynb  DS411 - Topic 8 - Named Entity Recognition.ipynb  DS411 PartOfSpeechTag.ipynb  practice.ipynb
src/preprocessing/: pipeline.py  steps.py
src/utils/: check_env_variable.py
tests/preprocessing/: test_pipeline.py  test_steps.py
