[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autocorrect>=2.6.1",
    "beartype>=0.22.2",
    "beautifulsoup4>=4.13.5",
    "bs4>=0.0.2",
    "contractions>=0.1.73",
    "dotenv>=0.9.9",
    "ebooklib>=0.20",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "pip>=25.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "spacy>=3.8.8",
    "sqlalchemy>=2.0.43",
    "typer>=0.16.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "ipykernel>=6.29.5",
    "pytest>=8.4.2",
    "ruff>=0.12.1",
    "src",
]

[tool.uv.sources]
src = { workspace = true }
